config/manager/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: k1s-operator-controller-manager
  labels:
    app.kubernetes.io/name: k1s-operator
    app.kubernetes.io/component: controller-manager
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: k1s-operator
      app.kubernetes.io/component: controller-manager
  policyTypes:
  - Ingress
  ingress: []
